--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">FlagApp</string>
     <string name="main_country">Страна</string>
     <string name="main_flag">Флаг</string>
+    <string name="te_1">Введи страну</string>
+    <string name="tw_ru1">Россия – самая большая страна мира её площадь 17 075 400 квадратных километров. Она больше США в 1,8 раз Площадь России приблизительно равна площади поверхности планеты Плутон.</string>
+    <string name="tw_ru2">Россия – самая небольшая страна мира её площадь 17 075 400 квадратных километров. Она больше США в 1,8 раз Площадь России приблизительно равна площади поверхности планеты Плутон.</string>
 </resources>
